playwright-wrapper/fixsyntax_redeploy_playwright-wrapper_20260219_101755/03_py_compile.txt
### CMD: python3 -m py_compile /home/aconte/docker/playwright-wrapper/app/main.py
### DATE: 2026-02-19T10:17:55+01:00

  File "/home/aconte/docker/playwright-wrapper/app/main.py", line 166
    else:
    ^^^^
SyntaxError: invalid syntax
